--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This demostrates how to create a react application using webpack.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "react",
